--- a/mungunu.html
+++ b/mungunu.html
@@ -4,153 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Birthday Card 🎉</title>
-<style>
-  * { box-sizing: border-box; margin:0; padding:0; }
-  body {
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-    background: linear-gradient(135deg,#a8edea,#fed6e3);
-    font-family: 'Poppins', sans-serif;
-    perspective:1000px;
-    overflow:hidden;
-  }
-
-  .card-container {
-    width: 400px;
-    height: 520px;
-    position: relative;
-  }
-
-  .card {
-    width: 100%;
-    height: 100%;
-    border-radius:25px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-    position:absolute;
-    transform-style: preserve-3d;
-    transition: transform 1s;
-    cursor:pointer;
-  }
-
-  .card.flipped { transform: rotateY(180deg); }
-
-  .card-side {
-    position:absolute;
-    width:100%;
-    height:100%;
-    border-radius:25px;
-    backface-visibility: hidden;
-    text-align:center;
-    padding:40px 30px;
-  }
-
-  /* FRONT */
-  .front {
-    background:#fff;
-  }
-
-  .front h1 {
-    font-size:32px;
-    background: linear-gradient(90deg,#ff6a88,#ffb6b9);
-    background-clip:text;
-    -webkit-text-fill-color:transparent;
-    margin-top:20px;
-  }
-
-  .front h2 {
-    font-size:20px;
-    color:#444;
-    margin-top:10px;
-  }
-
-  .cake {
-    position: relative;
-    margin: 40px auto;
-    width: 120px;
-    height: 100px;
-    background:#ffe4e1;
-    border-radius:10px 10px 0 0;
-    box-shadow: inset 0 -10px 0 #ffb6c1;
-  }
-
-  .candle { 
-    position:absolute; top:-35px; left:50%; transform:translateX(-50%);
-    width:10px; height:35px; background:#ffb6b9; border-radius:5px;
-  }
-
-  .flame {
-    position:absolute; top:-18px; left:50%; transform:translateX(-50%);
-    width:12px; height:12px;
-    background: radial-gradient(circle at 50% 30%, #ffe066,#ff9f1c);
-    border-radius:50%;
-    animation:flicker 0.2s infinite;
-  }
-
-  @keyframes flicker {
-    0%,100%{transform:translateX(-50%) scale(1); opacity:1;}
-    50%{transform:translateX(-50%) scale(1.2); opacity:0.8;}
-  }
-
-  .message {
-    color:#555; font-size:16px; margin-top:30px; line-height:1.5;
-  }
-
-  /* BACK */
-  .back {
-    background:#fff;
-    transform: rotateY(180deg);
-    display:flex; flex-direction:column; justify-content:center; align-items:center;
-  }
-
-  .back h1 {
-    font-size:28px;
-    color:#ff6a88;
-    margin-bottom:20px;
-  }
-
-  .back p {
-    color:#555;
-    font-size:16px;
-    line-height:1.5;
-  }
-
-  /* balloons */
-  .balloon {
-    position:absolute; width:60px; height:80px; border-radius:50%;
-    opacity:0.8; animation: float 6s ease-in-out infinite;
-  }
-
-  .balloon::after {
-    content:"";
-    position:absolute; width:2px; height:40px; background:#999; top:80px; left:50%; transform:translateX(-50%);
-  }
-
-  .b1 { background:#ff6f91; top:60%; left:10%; animation-delay:0s; }
-  .b2 { background:#ff9671; top:70%; left:70%; animation-delay:1s; }
-  .b3 { background:#f9f871; top:65%; left:40%; animation-delay:2s; }
-
-  @keyframes float {
-    0% { transform: translateY(0); }
-    50% { transform: translateY(-20px); }
-    100% { transform: translateY(0); }
-  }
-
-  /* confetti */
-  .confetti span {
-    position:absolute;
-    width:8px; height:8px;
-    background:#ff6f91; opacity:0.8;
-    animation: fall linear infinite;
-  }
-
-  @keyframes fall {
-    0% { transform: translateY(-10px) rotate(0); opacity:1; }
-    100% { transform: translateY(600px) rotate(360deg); opacity:0; }
-  }
-
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -187,24 +41,7 @@
 
 <div class="confetti" id="confetti"></div>
 
-<script>
-  const card = document.getElementById('card');
-  card.addEventListener('click', () => {
-    card.classList.toggle('flipped');
-  });
-
-  // confetti
-  const confetti = document.getElementById('confetti');
-  for(let i=0;i<60;i++){
-    const piece = document.createElement('span');
-    piece.style.left = Math.random()*100+'%';
-    piece.style.backgroundColor = `hsl(${Math.random()*360},70%,60%)`;
-    piece.style.width = piece.style.height = Math.random()*6+4+'px';
-    piece.style.animationDuration = (Math.random()*3+3)+'s';
-    piece.style.animationDelay = Math.random()*5+'s';
-    confetti.appendChild(piece);
-  }
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
+
